--- a/src/AppBundle/Resources/views/Meat/State/home.html.twig
+++ b/src/AppBundle/Resources/views/Meat/State/home.html.twig
@@ -11,9 +11,9 @@
 
         <div id="benefits">
             <ul>
-                <li><a href="#!about"><span class="sSize">{{ 'state.aboutBrasst'|trans }}</span></a></li>
-                <li><a href="#!browsers"><span class="sSize">{{ 'state.browsers'|trans }}</span></a></li>
-                <li><a href="#!api"><span class="sSize">{{ 'state.brasstApi'|trans }}</span></a></li>
+                <li><a href="#!about" class="toPage"><span class="sSize">{{ 'state.aboutBrasst'|trans }}</span></a></li>
+                <li><a href="#!browsers" class="toPage"><span class="sSize">{{ 'state.browsers'|trans }}</span></a></li>
+                <li><a href="#!api" class="toPage"><span class="sSize">{{ 'state.brasstApi'|trans }}</span></a></li>
             </ul>
         </div>
     </section>
