--- a/src/AppBundle/Resources/views/Meat/index.html.twig
+++ b/src/AppBundle/Resources/views/Meat/index.html.twig
@@ -29,7 +29,7 @@
                     <canvas id="connection"></canvas>
                 </div>
 
-                {% render controller('AppBundle:Meat\\State:home', { 'browsers': browsers }) %}
+                {% render controller('AppBundle:Meat\\State:home') %}
                 {% render controller('AppBundle:Meat\\State:aboutBrasst') %}
                 {% render controller('AppBundle:Meat\\State:browsers', { 'browsers': browsers }) %}
                 {% render controller('AppBundle:Meat\\State:brasstApi') %}
