--- a/src/AppBundle/Resources/public/Meat/css/main.css
+++ b/src/AppBundle/Resources/public/Meat/css/main.css
@@ -21,7 +21,8 @@
 #widget h2{
 	font-size: 1em;
 	font-weight: normal;
-	margin: 10px 0 0;
+	margin: 10px auto 0;
+	max-width: 800px;
 }
 #widget h3{
 	font-size: 1.125em;
@@ -29,6 +30,17 @@
 	margin-top: 10px;
 	color: #BD5532;
 	font-weight: bold;
+}
+#widget p.ieMessage{
+	max-width: 600px;
+	margin: 10px auto 0;
+	font-size: 0.75em;
+}
+#widget p.ieMessage span{
+	color: #BD5532;
+}
+#widget ul{
+	margin: 10px 0;
 }
 #widget ul li{
 	display: inline-block;
@@ -47,6 +59,10 @@
 
 #widget .old span{ color: #BD5532; }
 #widget .last span{ color: #73C8A9; }
+
+#widget ul li.outside{
+	width: 150px;
+}
 
 #benefits{
 	width: 100%;
@@ -113,6 +129,11 @@
 #about .inner p{
 	text-align: center;
 	padding: 0 100px;
+}
+#about .inner p > span,
+#about .inner p > a{
+	color: #BD5532;
+	font-size: 1em;
 }
 #about .inner hr{
 	width: 75%;
@@ -248,9 +269,9 @@
 	transform: scale(1);
 }
 #dropZone .browserInfo h2{
-	margin-top: 30px;
+	margin-top: 35px;
 	color: #73C8A9;
-	font-size: 1.5em;
+	font-size: 1.4em;
 }
 #dropZone .browserInfo h3,
 #dropZone .browserInfo p{
@@ -432,6 +453,19 @@
 #api #apiType .circle.active.widget .icon{background: url(../images/icons.png) no-repeat 0px -840px;}
 #api #apiType .circle.active.json .icon{background: url(../images/icons.png) no-repeat -120px -840px;}
 
+#api #apiType .tooltip{
+	width: 200px;
+	position: absolute;
+	font-weight: 300;
+	left: 50%;
+	bottom: 25px;
+	font-size: 0.75em;
+	margin-left: -100px;
+}
+#api #apiType .tooltip span{
+	color: #73C8A9;
+}
+
 #api .apInfoOverlay{
 	width: 100%;
 	height: 100%;
@@ -483,6 +517,10 @@
 #api .apInfoOverlay .info p{
 	margin: 0 auto;
 }
+#api .apInfoOverlay .info p a{
+	color: #BD5532;
+	font-size: 1em;
+}
 #api .apInfoOverlay .info ul{
 	width: 100%;
 	margin: 20px auto;
@@ -523,13 +561,13 @@
 	display: inline-block;
 	background: #373B44;
 	color: #DEE1B6;
-	padding: 5px;
 }
 #api .apInfoOverlay code.full{
 	display: block;
 	width: 100%;
 	margin: 10px 0 0 50px;
 	overflow: hidden;
+	padding: 5px;
 }
 #api .apInfoOverlay code.full ul,
 #api .apInfoOverlay code.full ul li{
@@ -538,6 +576,7 @@
 }
 #api .apInfoOverlay code.full ul li{
 	margin-left: 20px;
+	text-align: left;
 }
 #api .apInfoOverlay code.full ul li:first-child,
 #api .apInfoOverlay code.full ul li:last-child{
@@ -550,6 +589,11 @@
 #api .apInfoOverlay code.full ul li span{
 	color: #DEE1B6;
 	font-size: 1em;
+	display: inline-block;
+	width: 300px;
+}
+#api .apInfoOverlay code.full ul li span:nth-child(odd){
+	width: 120px;
 }
 #api .apInfoOverlay .info ul li code p{
 	color: #DEE1B6;
