--- a/src/AppBundle/Resources/views/Meat/Common/widget.html.twig
+++ b/src/AppBundle/Resources/views/Meat/Common/widget.html.twig
@@ -44,7 +44,7 @@
         </ul>
         {% if browserDetected.isOutdated %}
             <div class="button">
-                <a href="{{ browserDetected.stableVersionLink }}">
+                <a href="{{ browserDetected.stableVersionLink }}" target="_blank">
                     {{ 'browser.button_update'|trans }}
                 </a>
             </div>
