--- a/src/AppBundle/Resources/views/Meat/Api/widget.html.twig
+++ b/src/AppBundle/Resources/views/Meat/Api/widget.html.twig
@@ -17,7 +17,7 @@
                 {{ 'widget.message.deprecated'|trans }}
             {% endif %}
         </p>
-        <a href="{{ url('index') }}" class="updateButton" target="_blank">
+        <a href="{{ url('index', {}, true) }}" class="updateButton" target="_blank">
             {% if isOutdated %}
                 {{ 'widget.button.outdated'|trans }}
             {% elseif deprecated %}
