--- a/src/AppBundle/Resources/views/Meat/State/brasst_api.html.twig
+++ b/src/AppBundle/Resources/views/Meat/State/brasst_api.html.twig
@@ -60,13 +60,13 @@
                 <p>{{ 'content_api.guide.json.text'|trans }}</p>
                 <ul>
                     <li data-number="1">
-                        <p>{{ 'content_api.guide.json.step.1'|trans|raw }}:</p>
+                        <p>{{ 'content_api.guide.json.step.1'|trans|raw }}</p>
                         <code class="full">
                             <p>{{ 'https://brasst.net.ua/api?type=json' }}</p>
                         </code>
                     </li>
                     <li data-number="2">
-                        <p>{{ 'content_api.guide.json.step.2'|trans }}:</p>
+                        <p>{{ 'content_api.guide.json.step.2'|trans }}</p>
                         <code class="full">
                             <ul>
                                 <li><span>{</span></li>
