--- a/src/AppBundle/Resources/public/Meat/css/widget.css
+++ b/src/AppBundle/Resources/public/Meat/css/widget.css
@@ -25,6 +25,9 @@
 #brasstWidget a{
 	text-decoration: none;
 }
+#brasstWidget span{
+	font-family: "Open Sans", sans-serif;
+}
 
 #brasstWidget ul{
 	list-style: none;
@@ -57,6 +60,10 @@
 #brasstWidget > .inner{
 	width: 350px;
 	height: 350px;
+	max-width: 350px;
+	min-width: 350px;
+	max-height: 350px;
+	min-height: 350px;
 	padding: 20px;
 	position: absolute;
 	top: 50%;
@@ -223,6 +230,7 @@
 #brasstWidget > .inner .forget span{
 	color: #a65036;
 	cursor: pointer;
+	font-size: 1em;
 }
 #brasstWidget > .inner .forget span:hover{
 	text-decoration: underline;
