--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -4,10 +4,9 @@
         {% block meta %}
             <meta charset="UTF-8" />
             <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-            <meta name=“robots” content=“noindex,nofollow”>
         {% endblock %}
         {% block stylesheets %}{% endblock %}
-        <link rel="icon" type="image/png" href="{{ asset('bundles/app/Meat/images/favicon.png') }}" />
+        <link rel="icon" type="image/jpg" href="{{ asset('bundles/app/Meat/images/favicon.jpg') }}" />
     </head>
     <body>
         {% block body %}{% endblock %}
