--- a/src/AppBundle/Resources/views/Meat/index.html.twig
+++ b/src/AppBundle/Resources/views/Meat/index.html.twig
@@ -2,14 +2,13 @@
 {% extends '::base.html.twig' %}
 
 {% block meta %}
-    <title>Br.Asst.</title>
+    <title>{{ 'meta.title'|trans }}</title>
     {{ parent() }}
-    <meta name="Description" content="Описание необходимых мета-тегов.">
-    <meta property="og:title" content="welcome to Br.Asst.">
+    <meta name="Description" content="{{ 'meta.description'|trans }}">
+    <meta property="og:title" content="{{ 'meta.title'|trans }}">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="http://localhost/brasst/">
-    <meta property="og:description" content="Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.">
+    <meta property="og:url" content="{{ url('index', { '_locale': app.request.locale }) }}">
+    <meta property="og:description" content="{{ 'meta.description'|trans }}">
     <meta property="og:locale" content="en_GB">
 {% endblock %}
 
