--- a/src/AppBundle/Resources/public/Meat/css/main.css
+++ b/src/AppBundle/Resources/public/Meat/css/main.css
@@ -1,4 +1,3 @@
-@import url(common.css);
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 /*	main start												*/
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
@@ -699,6 +698,53 @@
 	background: #73C8A9 url(../images/icons.png) no-repeat -60px -900px;
 }
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-/*	api end													*/
+/*	api end									  */
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	404 start								  */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+.notFound #content .section{
+	opacity: 1;
+	-webkit-transform: translateX(0);
+	-moz-transform: translateX(0);
+	-ms-transform: translateX(0);
+	-o-transform: translateX(0);
+	transform: translateX(0);
+}
+.notFound #content .inner{
+	margin: 0;
+	padding: 50px 0;
+}
+.notFound #content .inner h1{
+	max-width: 500px;
+	margin: -40px auto 20px;
+	font-size: 8em;
+	color: #bd5532;
+	font-weight: normal;
+	border-bottom: 1px solid #373b44;
+}
+.notFound #content .inner h1 > span{
+	display: inline-block;
+	vertical-align: middle;
+	color: inherit;
+	font-weight: inherit;
+}
+.notFound #content .inner h1 .icon{
+	width: 80px;
+	height: 80px;
+	background: url(../images/bug.png) no-repeat 0 0;
+}
+.notFound #content .inner h2{
+	font-size: 2em;
+	text-transform: uppercase;
+}
+.notFound #content .inner .button{
+	margin-top: 30px;
+}
+.notFound #footer{
+	left: 0;
+}
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	404 end									  */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
