--- a/src/AppBundle/Resources/views/Meat/Common/header.html.twig
+++ b/src/AppBundle/Resources/views/Meat/Common/header.html.twig
@@ -1,5 +1,5 @@
 {# src/AppBundle/Resources/views/Meat/Common/header.html.twig #}
-<a href="{{ path('index') }}" class="logo" title="Br.Asst."><img src="{{ asset('bundles/app/Meat/images/logo.jpg') }}" alt="Br.Asst. logo"></a>
+<a href="{{ path('index_default') }}" class="logo" title="Br.Asst."><img src="{{ asset('bundles/app/Meat/images/logo.jpg') }}" alt="Br.Asst. logo"></a>
 <div id="langs">
     <hr class="line">
     <div class="wrap bs">
