--- a/src/AppBundle/Resources/views/Meat/index.html.twig
+++ b/src/AppBundle/Resources/views/Meat/index.html.twig
@@ -5,15 +5,31 @@
     <title>{{ 'meta.title'|trans }}</title>
     {{ parent() }}
     <meta name="Description" content="{{ 'meta.description'|trans }}">
+    {# Open graph #}
     <meta property="og:title" content="{{ 'meta.title'|trans }}">
     <meta property="og:type" content="website">
     <meta property="og:url" content="{{ url('index', { '_locale': app.request.locale }) }}">
+    <meta property="og:image" content="{{ asset('bundles/app/Meat/images/logo_social.jpg', absolute=true) }}" />
     <meta property="og:description" content="{{ 'meta.description'|trans }}">
-    <meta property="og:locale" content="en_GB">
+    <meta property="og:locale" content="{{ app.request.locale }}">
+    {# Locale reference #}
+    <link rel="canonical" href="{{ url('index_default') }}" />
+    <link rel="alternate" href="{{ url('index', { '_locale': "ua" }) }}" hreflang="uk-ua" />
+    <link rel="alternate" href="{{ url('index', { '_locale': "en" }) }}" hreflang="en-us" />
+    <link rel="alternate" href="{{ url('index', { '_locale': "ru" }) }}" hreflang="ru-ru" />
+    <link rel="alternate" href="{{ url('index', { '_locale': "en" }) }}" hreflang="x-default" />
 {% endblock %}
 
 {% block stylesheets %}
-    <link rel="stylesheet" href="{{ asset('bundles/app/Meat/css/main.css') }}">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:400,700&subset=latin,latin-ext">
+    {% stylesheets
+        'bundles/app/Meat/css/stabilizer.css'
+        'bundles/app/Meat/css/settings.css'
+        'bundles/app/Meat/css/common.css'
+        'bundles/app/Meat/css/main.css' output='bundles/app/Meat/css/compiled/compiled.css' filter='cssrewrite' %}
+        <link rel="stylesheet" href="{{ asset_url }}" />
+    {% endstylesheets %}
 {% endblock %}
 
 {% block body %}
@@ -44,4 +60,8 @@
 
 {% block javascripts %}
     <script src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.15/require.min.js" data-main="{{ asset('bundles/app/Meat/js/boot.js') }}"></script>
+    {# Google Analytics #}
+    {% include 'AppBundle:Meat\\Tracking:googleAnalytics.html.twig' %}
+    {# Yandex Metrika #}
+    {% include 'AppBundle:Meat\\Tracking:yandexMetrika.html.twig' %}
 {% endblock %}
