--- a/src/AppBundle/Resources/views/Meat/Common/header.html.twig
+++ b/src/AppBundle/Resources/views/Meat/Common/header.html.twig
@@ -47,6 +47,6 @@
     </div>
     <hr class="line">
     <div id="cheers">
-        <a href="http://cheersunlimited.com.ua/{{ app.request.locale }}" class="icon" title="CHEERS! Unlimited Web Agency" target="_blank"></a>
+        <a href="http://cheersunlimited.com.ua/{{ app.request.locale }}" class="icon" title="CHEERS - Unlimited Web Production" target="_blank"></a>
     </div>
 </div>
