--- a/src/AppBundle/Resources/views/Meat/index.html.twig
+++ b/src/AppBundle/Resources/views/Meat/index.html.twig
@@ -43,6 +43,7 @@
                 <div id="particles">
                     <canvas id="connection"></canvas>
                 </div>
+                <a href="http://www.csswinner.com/details/brasst/8843" id="nominee" target="_blank" title="Br.Asst. - vote for us on CSSwinner"></a>
 
                 {% render controller('AppBundle:Meat\\State:home') %}
                 {% render controller('AppBundle:Meat\\State:aboutBrasst') %}
