--- a/src/AppBundle/Resources/public/Meat/css/common.css
+++ b/src/AppBundle/Resources/public/Meat/css/common.css
@@ -230,7 +230,7 @@ hr, hr.line{
 #cheers{
 	width: 40px;
 	height: 40px;
-	margin: 20px auto 5px;
+	margin: 13px auto 10px;
 	overflow: hidden;
 }
 
@@ -282,7 +282,7 @@ hr, hr.line{
 	width: 100%;
 	height: 100%;
 	position: absolute;
-	z-index: 8;
+	z-index: 9;
 	float: left;
 	background: rgba(222, 225, 182, 0.75);
 	-webkit-transition: all 1s cubic-bezier(0.23, 1, 0.32, 1);
@@ -317,6 +317,18 @@ hr, hr.line{
 .section h1{font-size: 2.25em; text-transform: uppercase; font-weight: 300;}
 .section h1 span{color: #73C8A9; font-weight: 300;}
 .section h2{font-weight: 300;}
+
+#nominee{
+	display: block;
+	width: 67px;
+	height: 101px;
+	position: absolute;
+	top: 10%;
+	right: 0;
+	z-index: 15;
+	background: url("../images/nominee-new-black-right.png") no-repeat 0 0;
+	overflow: hidden;
+}
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 /*	Content end											*/
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
@@ -500,6 +512,3 @@ hr, hr.line{
 .mb20{
 	margin-bottom: 20px;
 }
-
-
-
